[gd_scene load_steps=4 format=2]

[ext_resource path="res://HUD/TextureProgress.gd" type="Script" id=1]
[ext_resource path="res://HUD/HUD.gd" type="Script" id=2]
[ext_resource path="res://Basic Assets/white.png" type="Texture" id=3]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 416.0
margin_top = 16.0
margin_right = 480.0
margin_bottom = 48.0
text = "Score :"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
margin_left = 472.0
margin_top = 16.0
margin_right = 600.0
margin_bottom = 48.0
text = "0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LifeLabel" type="Label" parent="."]
margin_left = 416.0
margin_top = 144.0
margin_right = 457.0
margin_bottom = 158.0
text = "Lives :"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LifeContainer" type="HBoxContainer" parent="."]
margin_left = 480.0
margin_top = 136.0
margin_right = 608.0
margin_bottom = 184.0
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BombLabel" type="Label" parent="."]
margin_left = 416.0
margin_top = 208.0
margin_right = 469.0
margin_bottom = 222.0
text = "Bombs :"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BombContainer" type="HBoxContainer" parent="."]
margin_left = 480.0
margin_top = 208.0
margin_right = 608.0
margin_bottom = 240.0
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PowerLabel" type="Label" parent="."]
margin_left = 416.0
margin_top = 288.0
margin_right = 544.0
margin_bottom = 320.0
text = "Power :         / 4.0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Power" type="Label" parent="."]
margin_left = 472.0
margin_top = 288.0
margin_right = 504.0
margin_bottom = 320.0
text = "1.0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GrazeLabel" type="Label" parent="."]
margin_left = 416.0
margin_top = 320.0
margin_right = 480.0
margin_bottom = 352.0
text = "Graze :"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Graze" type="Label" parent="."]
margin_left = 472.0
margin_top = 320.0
margin_right = 512.0
margin_bottom = 352.0
text = "0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SepLineL" type="Line2D" parent="."]
position = Vector2( -128, -1152 )
scale = Vector2( 1, 2.96914 )
points = PoolVector2Array( 128, 603.543, 128, -43.1103 )
width = 4.0
default_color = Color( 0.4, 0.501961, 1, 1 )

[node name="SepLineR" type="Line2D" parent="."]
position = Vector2( 256, -1149.36 )
scale = Vector2( 1, 2.96914 )
points = PoolVector2Array( 128, 602.653, 128, -44 )
width = 4.0
default_color = Color( 0.4, 0.501961, 1, 1 )

[node name="BossCutinSpawner" type="Node2D" parent="."]
position = Vector2( 0, -256 )

[node name="BossCutinTimer" type="Timer" parent="."]

[node name="BossHP" type="TextureProgress" parent="."]
margin_left = 16.0
margin_top = 8.0
margin_right = 368.0
margin_bottom = 24.0
value = 5.0
texture_progress = ExtResource( 3 )
nine_patch_stretch = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BossName" type="Label" parent="."]
margin_left = 16.0
margin_top = 32.0
margin_right = 160.0
margin_bottom = 64.0
text = "<boss name>"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BossSpellContainer" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 48.0
margin_right = 104.0
margin_bottom = 88.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="BossCutinTimer" to="." method="_on_BossCutinTimer_timeout"]
